deploy/pre-ngsa-asb-eastus/monitoring/prometheus/prometheus-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: prometheus
        image: acraksri3aov7twb4uy.azurecr.io/prom/prometheus:v2.30.0
      - name: thanos
        image: acraksri3aov7twb4uy.azurecr.io/thanos/thanos:v0.23.0
