deploy/pre-ngsa-asb-eastus/monitoring/prometheus/prometheus-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: prometheus
        image: acraksri3aov7twb4uy.azurecr.io/prom/prometheus:v2.30.0
      - name: thanos
        image: acraksri3aov7twb4uy.azurecr.io/thanos/thanos:v0.23.0

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thanos-grpc-vs
  namespace: monitoring
spec:
  hosts:
  - thanos-grpc-eastus-pre.cse.ms
