deploy/pre-ngsa-asb-eastus/monitoring/prometheus/prometheus-vs-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thanos-grpc-vs
  namespace: monitoring
spec:
  hosts:
  - thanos-grpc-eastus-pre.austinrdc.dev
